Mejora index e inclusion varios enlaces

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Inicio</title>
+		<title>Presentación</title>
 		<meta charset="utf-8">
 		<meta name="keywords" content="desarrollo,prácticas,java,php,javascript,sidnei,fullstack">
 		<meta name="description" content="Página de prueba de desarrollo de Sidnei"> 	
@@ -15,24 +15,62 @@
 	</head>
 
 	<body>
-		<div class="flex-responsive">
-			<header class="item-flex header">
-				<b>Header</b>
-				<a href="pagina2.html">Página 2</a>
-				<a href="transicion.html">Transicion</a>
+		<div class="grid-container">
+			<header class="grid-item grid-header">
+				<nav>
+					<b class="logo-img"><a href="#"><img src="#">Logo</a></b>
+					<b class="contacto"><a href="#">Contacto</a></b>
+				</nav>
 			</header>
 
-			<section class="item-flex section">
-				<h1> Prueba responsive con FLEX</h1>
-				
+			<section class="grid-item grid-section">
+				<article>
+					<h1>Pruebas de desarrollo web y  mobile fullstack</h1>
+					<p>Esta página fue creada con el proposito de prácticar el desarrollo web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java SE, Android, Kotlin, .NET, json y mas</p></article>
+				<article>
+					<h2>Elaboración de documentación</h2>
+					<p>Se crearan la siguiente documentación: ...</p>
+				</article>
 			</section>
 
-			<aside class="item-flex aside">
-				Aside
+			<aside class="grid-item grid-aside">
+				<h3>Tecnologías a usar</h3>
+				<p><a href="#">HTML</a></p>
+				<p><a href="#">CSS</a></p>
+				<p><a href="#">Javascript</a></p>
+				<p><a href="#">Python</a></p>
+				<p><a href="#">PHP</a></p>
+				<p><a href="#">MySql</a></p>
+				<p><a href="#">Java SE</a></p>
+				<p><a href="#">Java EE</a></p>
+				<p><a href="#">.NET</a></p>
+				<p><a href="#">Android</a></p>
+				<p><a href="#">Kotlin</a></p>
+
+				<h4>Pruebas de desarrollo</h4>
+				<p><a href="animacion">Animaciones</a></p>
+				<p><a href="flex">Juegos</a></p>
+				<p><a href="#">Implementación de API´s</a></p>
+				<p><a href="#">Patrones de diseño</a></p>
+				<p><a href="#">Responsive design</a></p>
+				<p><a href="#">Implementación de seguridad</a></p>
+
+				<h5>Documentación de sistemas</h5>
+				<p><a href="#">Analisis de riesgos</a></p>
+				<p><a href="#">Estudio de factibilidad</a></p>
+				<p><a href="#">RES</a></p>
+				<p><a href="#">Calidad</a></p>
+				<p><a href="#">Plan de testing</a></p>
+				<p><a href="#">WBS</a></p>
+				<p><a href="#">GANTT</a></p>
+				<p><a href="#">Manual de usuario</a></p>
+				<p><a href="#">Diagramas</a></p>
+
 			</aside>
 
-			<footer class="item-flex footer">
-				Footer
+			<footer class="grid-item grid-footer">
+				<b>Copyright</b>
+				<b>Redes sociales</b>
 			</footer>
 		
 		</div>
