--- a/pruebas.html
+++ b/pruebas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pagina2</title>
+		<title>Pruebas de desarrollo</title>
 		<meta charset="utf-8">
 		<meta name="keywords" content="desarrollo,prácticas,java,php,javascript,sidnei,fullstack">
 		<meta name="description" content="Página de prueba de desarrollo de Sidnei"> 	
