Diseno interface inicio

--- a/index.html
+++ b/index.html
@@ -12,34 +12,35 @@
 		<link rel="icon" href="Icono_logo.ico">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
 		<div class="grid-container">
 			<header class="grid-item grid-header">
 				<nav>
-					<b class="logo-img"><a href="#"><img src="#">Logo</a></b>
+					<div class="logo-img"><a href="#"><img src="Logo.png"></a></div>
 					<b class="contacto"><a href="#">Contacto</a></b>
 				</nav>
 			</header>
 
 			<section class="grid-item grid-section">
 				<article>
-					<h1>Pruebas de desarrollo web y  mobile fullstack</h1>
-					<p>Esta página fue creada con el proposito de prácticar el desarrollo web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java SE, Android, Kotlin, .NET, json y mas</p></article>
+					<h1>Pruebas de desarrollo web fullstack</h1>
+					<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, Kotlin, y documentación de sistemas.</p></article>
 				<article>
-					<h2>Elaboración de documentación</h2>
-					<p>Se crearan la siguiente documentación: ...</p>
+					
 				</article>
 			</section>
 
 			<aside class="grid-item grid-aside">
-				<h3>Tecnologías a usar</h3>
+
+				<p class="subtitulos-aside">Tecnologías utilizadas</p class="subtitulos-aside">
 				<p><a href="#">HTML</a></p>
 				<p><a href="#">CSS</a></p>
 				<p><a href="#">Javascript</a></p>
-				<p><a href="#">Python</a></p>
 				<p><a href="#">PHP</a></p>
+				<p><a href="#">Python</a></p>
 				<p><a href="#">MySql</a></p>
 				<p><a href="#">Java SE</a></p>
 				<p><a href="#">Java EE</a></p>
@@ -47,15 +48,15 @@
 				<p><a href="#">Android</a></p>
 				<p><a href="#">Kotlin</a></p>
 
-				<h4>Pruebas de desarrollo</h4>
-				<p><a href="animacion">Animaciones</a></p>
-				<p><a href="flex">Juegos</a></p>
+				<p class="subtitulos-aside">Pruebas de desarrollo</p>
+				<p><a href="#">Animaciones</a></p>
+				<p><a href="#">Juegos</a></p>
 				<p><a href="#">Implementación de API´s</a></p>
 				<p><a href="#">Patrones de diseño</a></p>
 				<p><a href="#">Responsive design</a></p>
 				<p><a href="#">Implementación de seguridad</a></p>
 
-				<h5>Documentación de sistemas</h5>
+				<p class="subtitulos-aside">Documentación de sistemas</p class="subtitulos-aside">
 				<p><a href="#">Analisis de riesgos</a></p>
 				<p><a href="#">Estudio de factibilidad</a></p>
 				<p><a href="#">RES</a></p>
@@ -65,6 +66,10 @@
 				<p><a href="#">GANTT</a></p>
 				<p><a href="#">Manual de usuario</a></p>
 				<p><a href="#">Diagramas</a></p>
+
+				<p class="subtitulos-aside">Proceso de creación de software</p>
+				<p><a href="#">Metodologías tradicionales</a></p>
+				<p><a href="#">Metodologías ágiles</a></p>
 
 			</aside>
 
