Pequenas mejoras diseno

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<meta name="copyright" content="Empresa Sidnei Sánchez">
 		<meta name="robots" content="index">
 		<meta name="robots" content="follow">
-		<link rel="icon" href="Icono_logo.ico">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="icon" href="imagenes/Icono_logo.ico">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	</head>
 
@@ -19,14 +19,14 @@
 		<div class="grid-container">
 			<header class="grid-item grid-header">
 				<nav>
-					<div class="logo-img"><a href="#"><img src="Logo.png"></a></div>
+					<div class="logo-img"><a href="#"><img src="imagenes/Logo.png"></a></div>
 					<b class="contacto"><a href="#">Contacto</a></b>
 				</nav>
 			</header>
 
 			<section class="grid-item grid-section">
 				<article>
-					<h1>Pruebas de desarrollo web fullstack</h1>
+					<h1>Pruebas de desarrollo de aplicaciones web.</h1>
 					<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, Kotlin, y documentación de sistemas.</p></article>
 				<article>
 					
@@ -56,6 +56,10 @@
 				<p><a href="#">Responsive design</a></p>
 				<p><a href="#">Implementación de seguridad</a></p>
 
+				<p class="subtitulos-aside">Proceso de creación de software</p>
+				<p><a href="#">Metodologías tradicionales</a></p>
+				<p><a href="#">Metodologías ágiles</a></p>
+
 				<p class="subtitulos-aside">Documentación de sistemas</p class="subtitulos-aside">
 				<p><a href="#">Analisis de riesgos</a></p>
 				<p><a href="#">Estudio de factibilidad</a></p>
@@ -67,15 +71,11 @@
 				<p><a href="#">Manual de usuario</a></p>
 				<p><a href="#">Diagramas</a></p>
 
-				<p class="subtitulos-aside">Proceso de creación de software</p>
-				<p><a href="#">Metodologías tradicionales</a></p>
-				<p><a href="#">Metodologías ágiles</a></p>
-
 			</aside>
 
 			<footer class="grid-item grid-footer">
-				<b>Copyright</b>
-				<b>Redes sociales</b>
+				<div class="instagram"><a href="https://www.instagram.com/cabezasidnei/?hl=es-la" target="_blank"><img src="imagenes/Logo instagram.png"></a></div>
+				<div class="facebook"><a href="https://www.facebook.com/sidnei.sanchez" target="_blank"><img src="imagenes/Logo facebook.png"></a></div>
 			</footer>
 		
 		</div>
