--- a/pruebas.html
+++ b/pruebas.html
@@ -9,7 +9,7 @@
 		<meta name="copyright" content="Empresa Sidnei Sánchez">
 		<meta name="robots" content="index">
 		<meta name="robots" content="follow">
-		<link rel="icon" href="Icono_logo.ico">
+		<link rel="icon" href="imagenes/Icono_logo.ico">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
 	</head>
