Mejoras en index.html

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 
 	<body>
 		<div class="grid-container">
-			<header class="grid-item grid-header">
+			<header class="grid-header">
 				<nav>
-					<div class="logo-img"><a href="#"><img src="imagenes/Logo.png"></a></div>
-					<div class="contacto"><a href="#" class="link-contacto">Contacto</a></div>
+					<a class="logo-img" href="#"><img src="imagenes/Logo.png"></a>
+					<a class="contacto" href="#">Contacto</a>
 				</nav>
+				
 			</header>
 
-			<section class="grid-item grid-section">
+			<section class="grid-section">
 					<h1>Pruebas de desarrollo de aplicaciones web.</h1>
 					<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo de aplicaciones web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, y Kotlin, aplicando diferentes metodologías y documentación de sistemas.</p>
 			</section>
@@ -82,9 +83,9 @@
 
 			</aside>
 
-			<footer class="grid-item grid-footer">
-				<div class="instagram"><a href="https://www.instagram.com/cabezasidnei/?hl=es-la" target="_blank"><img src="imagenes/Logo instagram.png"></a></div>
-				<div class="facebook"><a href="https://www.facebook.com/sidnei.sanchez" target="_blank"><img src="imagenes/Logo facebook.png"></a></div>
+			<footer class="grid-footer">
+				<a class="grid-footer__item instagram" href="https://www.instagram.com/cabezasidnei/?hl=es-la" target="_blank"><img src="imagenes/Logo instagram.png"></a>
+				<a class="grid-footer__item facebook" href="https://www.facebook.com/sidnei.sanchez" target="_blank"><img src="imagenes/Logo facebook.png"></a>
 			</footer>
 		
 		</div>
