Prueba con VS Code

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<header class="grid-header">
 				<nav>
 					<a class="logo-img" href="index.html" aria-label="Inicio"><img src="imagenes/Logo.png" alt=""></a>
+					<a class="pagina2" href="pagina2"></a>
 					<a class="contacto" href="#" aria_label="Formulario de contacto">Contacto</a>
 				</nav>
 				
