--- a/index2.html
+++ b/index2.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Presentación 1</title>
+		<title>Presentación 2</title>
 		<meta charset="utf-8">
 		<meta name="keywords" content="desarrollo,prácticas,java,php,javascript,sidnei,fullstack">
 		<meta name="description" content="Pruebas de desarrollo de aplicaciones web"> 	
 		<meta name="author" content="Sidnei Sánchez">
 		<meta name="copyright" content="Empresa Sidnei Sánchez">
-		<meta name="robots" content="index">
+		<meta name="robots" content="index2">
 		<meta name="robots" content="follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" href="imagenes/Icono_logo.ico">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+		<link rel="icon" href="imagenes/Icono_logo.ico">
+		<link rel="stylesheet" type="text/css" href="style2.css">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">	
 	</head>
-
 	<body>
 		<div class="grid-container">
-			<header class="grid-header">
-				<nav>
-					<a class="logo-img" href="index.html" aria-label="Inicio"><img src="imagenes/Logo.png" alt=""></a>
-					<a class="index2" href="index2.html">Index 2</a>
-					<a class="contacto" href="#" aria_label="Formulario de contacto">Contacto</a>
+			<header class="grid-item header">
+				<a class="logo-img" href="index.html" aria-label="Inicio"><img src="imagenes/Logo.png" alt=""></a>
+				<nav class="nav">
+					<ul class="nav__ul">
+						<li><a class="nav__li" href="index.html">Index 1</a></li>
+						<li><a class="nav__li" href="#">Contacto</a></li>
+					</ul>
+					<ul class="nav__resp-ul">
+						<li><a class="nav__resp-li" href="index.html">Index 1</a></li>
+						<li><a class="nav__resp-li" href="#">Contacto</a></li>
+					</ul>
 				</nav>
+				
 			</header>
-
-			<section class="grid-section">
-					<h1>Pruebas de desarrollo de aplicaciones web.</h1>
-					<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo de aplicaciones web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, y Kotlin, aplicando diferentes metodologías y documentación de sistemas.</p>
+	
+			<section class="grid-item section">
+				<h1>Pruebas de desarrollo de aplicaciones web.</h1>
+				<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo de aplicaciones web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, y Kotlin, aplicando diferentes metodologías y documentación de sistemas.</p>
 			</section>
 
-			<!--Menu aside mobile-->
-			<aside class="grid-aside">
+			<aside class="grid-item aside">
+				<!--Menu aside mobile-->
 				<div class="menu-mobile">
 					<img src="imagenes/logo_tecno.png">
-					<ul class="grid-aside__item tecnologias">
+					<ul class="subtitulos-aside-mobile">
 						<li><a href="#">HTML</a></li>
 						<li><a href="#">CSS</a></li>
 						<li><a href="#">Javascript</a></li>
@@ -48,7 +54,7 @@
 						<li><a href="#">Android</a></li>
 						<li><a href="#">Kotlin</a></li>
 					</ul>	
-					<ul class="grid-aside__item Pruebas"><img src="imagenes/logo_prueba.png">
+					<ul class="subtitulos-aside-mobile"><img src="imagenes/logo_prueba.png">
 						<li><a href="#">Animaciones</a></li>
 						<li><a href="#">Juegos</a></li>
 						<li><a href="#">Implementación de API´s</a></li>
@@ -56,11 +62,11 @@
 						<li><a href="#">Responsive design</a></li>
 						<li><a href="#">Implementación de seguridad</a></li>
 					</ul>
-					<ul class="grid-aside__item metodologías"><img src="imagenes/logo_meto.png">
+					<ul class="subtitulos-aside-mobile"><img src="imagenes/logo_meto.png">
 						<li><a href="#">Metodologías tradicionales</a></li>
 						<li><a href="#">Metodologías ágiles</a></li>
 					</ul>	
-					<ul class="grid-aside__item documentación"><img src="imagenes/logo_docu.png">
+					<ul class="subtitulos-aside-mobile"><img src="imagenes/logo_docu.png">
 						<li><a href="#">Análisis de riesgos</a></li>
 						<li><a href="#">Estudio de factibilidad</a></li>
 						<li><a href="#">RES</a></li>
@@ -72,12 +78,10 @@
 						<li><a href="#">Diagramas</a></li>
 					</ul>
 				</div>	
-			</aside>
-
+			
 			<!--Menu aside pc-->
-			<aside class="grid-aside">
 				<div class="menu-pc">
-					<p class="subtitulos-aside">Tecnologías utilizadas</p>
+					<p class="subtitulos-aside-pc">Tecnologías utilizadas</p>
 					<p><a href="#">HTML</a></p>
 					<p><a href="#">CSS</a></p>
 					<p><a href="#">Javascript</a></p>
@@ -90,7 +94,7 @@
 					<p><a href="#">Android</a></p>
 					<p><a href="#">Kotlin</a></p>
 
-					<p class="subtitulos-aside">Pruebas de desarrollo</p>
+					<p class="subtitulos-aside-pc">Pruebas de desarrollo</p>
 					<p><a href="#">Animaciones</a></p>
 					<p><a href="#">Juegos</a></p>
 					<p><a href="#">Implementación de API´s</a></p>
@@ -98,11 +102,11 @@
 					<p><a href="#">Responsive design</a></p>
 					<p><a href="#">Implementación de seguridad</a></p>
 
-					<p class="subtitulos-aside">Proceso de creación de software</p>
+					<p class="subtitulos-aside-pc">Proceso de creación de software</p>
 					<p><a href="#">Metodologías tradicionales</a></p>
 					<p><a href="#">Metodologías ágiles</a></p>
 
-					<p class="subtitulos-aside">Documentación de sistemas</p>
+					<p class="subtitulos-aside-pc">Documentación de sistemas</p>
 					<p><a href="#">Analisis de riesgos</a></p>
 					<p><a href="#">Estudio de factibilidad</a></p>
 					<p><a href="#">RES</a></p>
@@ -115,11 +119,10 @@
 				</div>
 			</aside>
 
-			<footer class="grid-footer">
+			<footer class="grid-item footer">
 				<a class="grid-footer__item instagram" href="https://www.instagram.com/cabezasidnei/?hl=es-la" target="_blank"><img src="imagenes/Logo instagram.png"></a>
 				<a class="grid-footer__item facebook" href="https://www.facebook.com/sidnei.sanchez" target="_blank"><img src="imagenes/Logo facebook.png"></a>
 			</footer>
-		
 		</div>
 	</body>
 </html>
