Pocas mejoras hechas

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 	<body>
 		<div class="grid-container">
 			<header class="grid-header">
-				<nav>
-					<a class="logo-img" href="index.html" aria-label="Inicio"><img src="imagenes/Logo.png" alt=""></a>
-					<a class="index2" href="index2.html">Index 2</a>
-					<a class="contacto" href="#" aria_label="Formulario de contacto">Contacto</a>
+				<a class="logo-img" href="index.html" aria-label="Inicio"><img src="imagenes/Logo.png" alt=""></a>
+				<nav class="nav">
+					<ul class="nav__ul">
+						<li><a class="nav__li" href="index2.html">Index 2</a></li>
+						<li><a class="nav__li" href="#">Contacto</a></li>
+					</ul>
+					<ul class="nav__resp-ul">
+						<li><a class="nav__resp-li" href="index2.html">Index 2</a></li>
+						<li><a class="nav__resp-li" href="#">Contacto</a></li>
+					</ul>
 				</nav>
 			</header>
 
@@ -34,8 +40,8 @@
 			<!--Menu aside mobile-->
 			<aside class="grid-aside">
 				<div class="menu-mobile">
-					<img src="imagenes/logo_tecno.png">
 					<ul class="grid-aside__item tecnologias">
+						<img src="imagenes/logo_tecno.png">
 						<li><a href="#">HTML</a></li>
 						<li><a href="#">CSS</a></li>
 						<li><a href="#">Javascript</a></li>
@@ -48,7 +54,8 @@
 						<li><a href="#">Android</a></li>
 						<li><a href="#">Kotlin</a></li>
 					</ul>	
-					<ul class="grid-aside__item Pruebas"><img src="imagenes/logo_prueba.png">
+					<ul class="grid-aside__item Pruebas">
+						<img src="imagenes/logo_prueba.png">
 						<li><a href="#">Animaciones</a></li>
 						<li><a href="#">Juegos</a></li>
 						<li><a href="#">Implementación de API´s</a></li>
@@ -56,11 +63,13 @@
 						<li><a href="#">Responsive design</a></li>
 						<li><a href="#">Implementación de seguridad</a></li>
 					</ul>
-					<ul class="grid-aside__item metodologías"><img src="imagenes/logo_meto.png">
+					<ul class="grid-aside__item metodologías">
+						<img src="imagenes/logo_meto.png">
 						<li><a href="#">Metodologías tradicionales</a></li>
 						<li><a href="#">Metodologías ágiles</a></li>
 					</ul>	
-					<ul class="grid-aside__item documentación"><img src="imagenes/logo_docu.png">
+					<ul class="grid-aside__item documentación">
+						<img src="imagenes/logo_docu.png">
 						<li><a href="#">Análisis de riesgos</a></li>
 						<li><a href="#">Estudio de factibilidad</a></li>
 						<li><a href="#">RES</a></li>
