--- a/index2.html
+++ b/index2.html
@@ -40,8 +40,8 @@
 			<aside class="grid-item aside">
 				<!--Menu aside mobile-->
 				<div class="menu-mobile">
-					<img src="imagenes/logo_tecno.png">
 					<ul class="subtitulos-aside-mobile">
+						<img src="imagenes/logo_tecno.png">
 						<li><a href="#">HTML</a></li>
 						<li><a href="#">CSS</a></li>
 						<li><a href="#">Javascript</a></li>
@@ -54,7 +54,8 @@
 						<li><a href="#">Android</a></li>
 						<li><a href="#">Kotlin</a></li>
 					</ul>	
-					<ul class="subtitulos-aside-mobile"><img src="imagenes/logo_prueba.png">
+					<ul class="subtitulos-aside-mobile">
+						<img src="imagenes/logo_prueba.png">
 						<li><a href="#">Animaciones</a></li>
 						<li><a href="#">Juegos</a></li>
 						<li><a href="#">Implementación de API´s</a></li>
@@ -62,11 +63,13 @@
 						<li><a href="#">Responsive design</a></li>
 						<li><a href="#">Implementación de seguridad</a></li>
 					</ul>
-					<ul class="subtitulos-aside-mobile"><img src="imagenes/logo_meto.png">
+					<ul class="subtitulos-aside-mobile">
+						<img src="imagenes/logo_meto.png">
 						<li><a href="#">Metodologías tradicionales</a></li>
 						<li><a href="#">Metodologías ágiles</a></li>
 					</ul>	
-					<ul class="subtitulos-aside-mobile"><img src="imagenes/logo_docu.png">
+					<ul class="subtitulos-aside-mobile">
+						<img src="imagenes/logo_docu.png">
 						<li><a href="#">Análisis de riesgos</a></li>
 						<li><a href="#">Estudio de factibilidad</a></li>
 						<li><a href="#">RES</a></li>
