Creación archivos JavaScript

--- a/index2.html
+++ b/index2.html
@@ -32,9 +32,10 @@
 				
 			</header>
 	
+
 			<section class="grid-item section">
 				<h1>Pruebas de desarrollo de aplicaciones web.</h1>
-				<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo de aplicaciones web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, y Kotlin, aplicando diferentes metodologías y documentación de sistemas.</p>
+				<p class="parrafo-descripcion">Esta página fue creada con el proposito de practicar el desarrollo de aplicacddiones web con tecnologías Html, CSS, Javascript, PHP, Python, MySql, Java SE, Java EE, .NET, Android, y Kotlin, aplicando diferentes metodologías y documentación de sistemas.</p>
 			</section>
 
 			<aside class="grid-item aside">
