--- a/index4.html
+++ b/index4.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Rancio</h2>
-    <script src="codigoJS.js"></script>    
+    <script src="codigo.js"></script>
 </body>
-</html></div>
+</html>
