--- a/index4.html
+++ b/index4.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style4.css" type="text/css">
 </head>
 <body>
-    <script src="codigo.js"></script>
+    <br><br>
+    <div class="flex-container">
+
+    </div>
+    <form>
+        <input type="hidden" name="data" class="key-data">
+        <input type="submit" value="Comprar" class="send-button">
+    </form>
+    
+<script src="codigo.js"></script>
 </body>
 </html>
