Calculadora con JS

--- a/index5.html
+++ b/index5.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     
+    <input type="text" class="input-prueba">
+    <div class="selecionado">
+
+    </div>
 
     <script src="codigo5.js"></script>
 </body>
