Creacion lindo formulario

--- a/index5.html
+++ b/index5.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style5.css">
 </head>
 <body>
-    
-    <input type="text" class="input-prueba">
-    <div class="selecionado">
-
-    </div>
+    <br><br><br>
+    <form autocomplete="off" class="form">
+        <H2>INSCRIPCION DE MATERIAS ADEUDADAS</H2>
+        <input type="text" placeholder="Nombre completo" id="nombre">
+        <input type="mail" placeholder="Email" id="email">
+        <input type="text" placeholder="Materia adeudada" id="materia">
+        <input type="submit" id="solicitar" value="Solicitar mesa">
+    </form>
 
     <script src="codigo5.js"></script>
 </body>
