Practica modal, try catch (pagina con errores, sin terminar)

--- a/Formulario.html
+++ b/Formulario.html
@@ -15,7 +15,7 @@
             <input type="email" placeholder="Email" id="email" required >
             <input type="text" placeholder="Materia adeudada" id="materia" required >
             <input type="submit" id="solicitar" value="Solicitar mesa">
-            <div class="resultado"></div>
+            <div class="prevRes"></div>
         </form>
         <script src="Formulario.js"></script>
     </body>
