Creacion Calculadora 2, con drag and drop

--- a/calculadora.html
+++ b/calculadora.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="calculadora">
-        <form name="calc">
+        <form name="calc" class="form">
             <input type="text" class="disp" value ="" name="display" autocomplete="off" readonly placeholder="0">
                         
             <input type="button" value = "%" onclick="document.calc.display.value +=`%`">
