Algunos cambios menores

--- a/index5.html
+++ b/index5.html
@@ -9,8 +9,9 @@
     <title>Index 5</title>
 </head>
 <body>
- 
-
+    <div class="reloj">
+        <p id ="hora">00:00:00</p>
+    </div>
     <script src="codigo5.js"></script>
 </body>
 </html>
